--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -9,14 +9,16 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "<font color='green'>**This module has been validated against a trusted code**</font> \n",
+    "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "(trusted code = the hand-written smallbPoynET in WVUThorns_diagnostics, which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group).\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has been validated against the hand-written smallbPoynET in WVUThorns_diagnostics (a trsuted code), which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group.\n",
     "\n",
     "## Introduction:\n",
     "In the [previous tutorial module](Tutorial-u0_smallb_Poynting-Cartesian.ipynb), we constructed within SymPy full expressions for the 4-velocity time-component $u^0$, the magnetic field (measured by a comoving observer) $b^{\\mu}$, and the Poynting vector $S^i$.\n",
     "\n",
-    "Here we will work through the steps necessary to construct an Einstein Toolkit diagnostic thorn (module) that uses ADMBase and HydroBase variables as input into the NRPy+-generated SymPy expressions for $b^{\\mu}$, $b^2$, and the Poynting Vector $S^i$, outputting to gridfunctions $\\text{smallb4U[]}$, $\\text{smallb2etk}$ (the \"etk\" suffix must be appended because base gridfunction names ending in numbers are not allowed in NRPy+), and $\\text{SPoyn[]}$, respectively. "
+    "Here we will work through the steps necessary to construct an Einstein Toolkit diagnostic thorn (module) that uses ADMBase and HydroBase variables as input into the NRPy+-generated SymPy expressions for $b^{\\mu}$, $b^2$, and the Poynting Vector $S^i$, outputting to gridfunctions `smallb4U[]`, `smallb2etk` (the \"etk\" suffix must be appended because base gridfunction names ending in numbers are not allowed in NRPy+), and `SPoyn[]`, respectively. "
    ]
   },
   {
@@ -31,10 +33,10 @@
     "This tutorial is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Call on NRPy+ to convert the SymPy expressions for $b^{\\mu}$, $b^2$, and the Poynting Vector $S^i$ to C code kernels\n",
-    "1. [Step 2](#etk) Build up the needed Einstein Toolkit infrastructure to implement the NRPy+-generated C code kernels\n",
+    "1. [Step 2](#etk): Build up the needed Einstein Toolkit infrastructure to implement the NRPy+-generated C code kernels\n",
     "    1. [Step 2.a](#etkc): Write the C code functions called by the Einstein Toolkit scheduler that incorporate the above \".h\" files\n",
-    "    1. [Step 2.b](#cclfiles) CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
-    "    1. [Step 2.c](etksys)Inform the Einstein Toolkit build system of the C code\n",
+    "    1. [Step 2.b](#cclfiles): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "    1. [Step 2.c](etksys): Inform the Einstein Toolkit build system of the C code\n",
     "1. [Step 3](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -89,9 +91,9 @@
     "* the densitized magnetic field of a normal observer $\\tilde{B}^i$\n",
     "\n",
     "**Output gridfunctions:**\n",
-    "* the magnetic field as observed in a frame comoving with the plasma $b^\\mu$ ($\\text{smallb4U[]}$)\n",
-    "* twice the magnetic pressure $2 P_{\\rm mag} = b_\\mu b^\\mu = b^2$ ($\\text{smallb2etk}$)\n",
-    "* the Poynting vector $S^i$ ($\\text{SPoyn[]}$)"
+    "* the magnetic field as observed in a frame comoving with the plasma $b^\\mu$ (`smallb4U[]}`)\n",
+    "* twice the magnetic pressure $2 P_{\\rm mag} = b_\\mu b^\\mu = b^2$ (`smallb2etk`)\n",
+    "* the Poynting vector $S^i$ (`SPoyn[]`)"
    ]
   },
   {
@@ -284,11 +286,11 @@
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
-    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
-    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
+    "1. `interface.ccl`: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
+    "1. `param.ccl`: specifies free parameters within the thorn.\n",
+    "1. `schedule.ccl`: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
     "\n",
-    "Let's start with $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
+    "Let's start with `interface.ccl`. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an `interface.ccl` file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
    ]
   },
   {
@@ -343,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). \n",
+    "We will now write the file `param.ccl`. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). \n",
     "\n",
     "The first parameter specifies how many time levels need to be stored. Generally when using the ETK's adaptive-mesh refinement (AMR) driver [Carpet](https://carpetcode.org/), three timelevels are needed so that the diagnostic quantities can be properly interpolated and defined across refinement boundaries. \n",
     "\n",
@@ -394,9 +396,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "Finally, we will write the file `schedule.ccl`; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
-    "This file registers the function we wish to call, \"sbPoynETNRPy\", with the Einstein Toolkit scheduler."
+    "This file registers the function we wish to call, `sbPoynETNRPy`, with the Einstein Toolkit scheduler."
    ]
   },
   {
@@ -464,7 +466,7 @@
     "## Step 2.c: Inform the Einstein Toolkit build system of the C code \\[Back to [top](#toc)\\]\n",
     "$$\\label{etksys}$$\n",
     "\n",
-    "The $\\text{make.code.defn}$ lists the source files that need to be compiled. Naturally, this thorn has only the one C file $-$ written above $-$ to compile:"
+    "The `make.code.defn` lists the source files that need to be compiled. Naturally, this thorn has only the one C file $-$ written above $-$ to compile:"
    ]
   },
   {
