--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -7,13 +7,18 @@
     "# Calculating Spin-Weighted Spherical Harmonics\n",
     "## Authors: Zach Etienne & Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). In addition, its results have been validated against a [trusted Mathematica notebook](https://demonstrations.wolfram.com/versions/source.jsp?id=SpinWeightedSphericalHarmonics&version=0012).\n",
+    "\n",
     "### NRPy+ Source Code for this module: [SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics.py](../edit/SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics.py)\n",
     "\n",
     "## Introduction:\n",
     "This tutorial module defines a Python function for computing spin-weighted spherical harmonics using Sympy. Spin-weight $s=-2$ spherical harmonics are the natural basis for decomposing gravitational wave data.\n",
     "\n",
-    "The tutorial contains code necessary to validate the resulting expressions assuming $s=-2$ against a trusted Mathematica notebook (validated for all $(\\ell,m)$ up to $\\ell=8$. Finally it outputs a C code capable of computing $_{-2}Y_{\\ell m} (\\theta, \\phi)$ for all $(\\ell,m)$ for $\\ell=0$ up to `maximum_l`.\n",
-    "\n"
+    "The tutorial contains code necessary to validate the resulting expressions assuming $s=-2$ against a trusted Mathematica notebook (validated for all $(\\ell,m)$ up to $\\ell=8$. Finally it outputs a C code capable of computing $_{-2}Y_{\\ell m} (\\theta, \\phi)$ for all $(\\ell,m)$ for $\\ell=0$ up to `maximum_l`."
    ]
   },
   {
@@ -194,12 +199,12 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# [Step 5](#code_validation): Code Validation against SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# [Step 5](#code_validation): Code Validation against `SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
-    "As additional validation, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
+    "As additional validation, we verify agreement in the SymPy expressions for the spin-weight -2 spherical harmonics expressions between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics](../edit/SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics.py) module."
+    "2. the NRPy+ [`SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics`](../edit/SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics.py) module."
    ]
   },
   {
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +260,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-SpinWeighted_Spherical_Harmonics.ipynb to latex\n",
-      "[NbConvertApp] Writing 41997 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
+      "[NbConvertApp] Writing 37135 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -279,21 +284,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
