--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -9,7 +9,9 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "<font color='green'>**This module has been validated to converge at the expected order to the exact solution (see [plot](#convergence) at bottom).**</font>\n",
+    "**Module Status:** <font color='green'><b>Validated</b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has been validated to converge at the expected order to the exact solution (see [plot](#convergence) at bottom).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) Generates the right-hand side for the Scalar Wave Equation in cartesian coordinates\n",
