--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -8,7 +8,15 @@
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
-    "<font color='green'>**This module has been validated against a trusted code (the hand-written smallbPoynET in WVUThorns_diagnostics, which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group)**</font> "
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has been validated against a trusted code (the hand-written smallbPoynET in WVUThorns_diagnostics, which itself is based on expressions in IllinoisGRMHD... which was validated against the original GRMHD code of the Illinois NR group)\n",
+    "\n",
+    "### NRPy+ Source Code for this module: [u0_smallb_Poynting__Cartesian.py](../edit/u0_smallb_Poynting__Cartesian/u0_smallb_Poynting__Cartesian.py)\n",
+    "\n",
+    "[comment]: <> (Introduction: TODO)"
    ]
   },
   {
@@ -26,12 +34,12 @@
     "    1. [Step 1.a](#4metric): Compute the 4-metric $g_{\\mu\\nu}$ from the ADM 3+1 variables\n",
     "    1. [Step 1.b](#u0): Compute $u^0$ from the Valencia 3-velocity\n",
     "    1. [Step 1.c](#uj): Compute $u_j$ from $u^0$, the Valencia 3-velocity, and $g_{\\mu\\nu}$\n",
-    "    1. [Step 1.d](#gamma): Compute $\\gamma=\\text{gammaDET}$ from the ADM 3+1 variables\n",
+    "    1. [Step 1.d](#gamma): Compute $\\gamma=$ `gammaDET` from the ADM 3+1 variables\n",
     "    1. [Step 1.e](#beta): Compute $\\beta^\\mu$\n",
     "1. [Step 2](#poynting_flux): Defining the Poynting Flux Vector $S^{i}$\n",
     "    1. [Step 2.a](#g): Computing $g^{i\\nu}$\n",
     "    1. [Step 2.b](#s): Computing $S^{i}$\n",
-    "1. [Step 3](#code_validation): Code Validation against u0_smallb_Poynting__Cartesian NRPy+ module\n",
+    "1. [Step 3](#code_validation): Code Validation against `u0_smallb_Poynting__Cartesian` NRPy+ module\n",
     "1. [Step 4](#appendix): Appendix: Proving Eqs. 53 and 56 in [Duez *et al* (2005)](https://arxiv.org/pdf/astro-ph/0503420.pdf)\n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
@@ -483,7 +491,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 3: Code Validation against u0_smallb_Poynting__Cartesian NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 3: Code Validation against `u0_smallb_Poynting__Cartesian` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for u0, smallbU, smallb2etk, and PoynSU between\n",
@@ -644,7 +652,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-u0_smallb_Poynting-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 60666 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 13, column 1)\n",
+      "[NbConvertApp] Writing 61008 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
