--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "## This module provides another initial data option for $\\texttt{GiRaFFE}$, drawn from [this paper](https://arxiv.org/abs/1310.3274) .\n",
     "\n",
+    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py)\n",
     "\n",
     "## Introduction:\n",
@@ -66,7 +70,7 @@
     "1. [Step 2](#vector_ak): Set the vector $A_k$\n",
     "1. [Step 3](#vectors_for_velocity): Set the vectors $B^i$ and $E^i$ for the velocity\n",
     "1. [Step 4](#vi): Calculate $v^i$\n",
-    "1. [Step 5](#code_validation): Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests NRPy+ module\n",
+    "1. [Step 5](#code_validation): Code Validation against `GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests` NRPy+ module\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -450,12 +454,12 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 5: Code Validation against GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Code Validation against `GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Aligned Rotator initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEfood_HO_1D_tests.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py) module.\n",
+    "2. the NRPy+ [`GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py`](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py) module.\n",
     "\n"
    ]
   },
