--- a/Tutorial-MaxwellCurvilinear.ipynb
+++ b/Tutorial-MaxwellCurvilinear.ipynb
@@ -9,9 +9,13 @@
     "## Author: Ian Ruchlin\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
     "### The following formulations of Maxwell's equations, called System I and System II, are described in [Illustrating Stability Properties of Numerical Relativity in Electrodynamics](https://arxiv.org/abs/gr-qc/0201051) by Knapp et al.\n",
     "\n",
-    "<font color='red'>**This module has not yet undergone validation testing. Do not use it until after appropriate validation testing has been performed.**</font>\n",
+    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has not yet undergone validation testing. Do ***not*** use it until after appropriate validation testing has been performed.\n",
     "\n",
     "## Introduction:\n",
     "[Maxwell's equations](https://en.wikipedia.org/wiki/Maxwell%27s_equations) are subject to the Gauss' law constraint\n",
