--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -11,6 +11,10 @@
     "\n",
     "## This module generates the C Code for the Scalarwave in Cartesian coordinates and sets up [Plane Wave Initial Data](https://en.wikipedia.org/wiki/Initial_value_problem). \n",
     "\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). In addition, all expressions have been validated against a trusted code (the [original SENR/NRPy+ code](https://bitbucket.org/zach_etienne/nrpy)).\n",
+    "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py)\n",
     "* [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py)\n",
@@ -100,9 +104,9 @@
     "1. [Step 1](#initializenrpy): Initialize core NRPy+ modules\n",
     "1. [Step 2](#step2): Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing\n",
     "1. [Step 3](#step3): Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing\n",
-    "    1. [Step 3.a](#code_validation1): Code Validation against ScalarWave.ScalarWave_RHSs NRPy+ module\n",
+    "    1. [Step 3.a](#code_validation1): Code Validation against `ScalarWave.ScalarWave_RHSs` NRPy+ module\n",
     "1. [Step 4](#step4): Plane-Wave Initial Data for the Scalar Wave Equation\n",
-    "    1. [Step 4.a](#code_validation2): Code Validation against ScalarWave.InitialData_PlaneWave NRPy+ module\n",
+    "    1. [Step 4.a](#code_validation2): Code Validation against `ScalarWave.InitialData_PlaneWave` NRPy+ module\n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -250,7 +254,7 @@
     "+ \\frac{4}{3}  \\left(u_{j+1} + u_{j-1}\\right)\n",
     "- \\frac{5}{2} u_j \\right),\n",
     "\\end{equation}\n",
-    "correctly (easier to read in the \"Original SymPy expressions\" comment block at the top of the C output. Note that $\\texttt{invdx0}=1/\\Delta x_0$, where $\\Delta x_0$ is the (uniform) grid spacing in the zeroth, or $x_0$ direction."
+    "correctly (easier to read in the \"Original SymPy expressions\" comment block at the top of the C output. Note that `invdx0`$=1/\\Delta x_0$, where $\\Delta x_0$ is the (uniform) grid spacing in the zeroth, or $x_0$ direction."
    ]
   },
   {
@@ -411,10 +415,10 @@
    "source": [
     "<a id='code_validation1'></a>\n",
     "\n",
-    "## Step 3.a:  Code Validation against ScalarWave.ScalarWave_RHSs NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "## Step 3.a:  Code Validation against `ScalarWave.ScalarWave_RHSs` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation1}$$\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the three-spatial-dimension Scalar Wave equation (i.e., uu_rhs and vv_rhs) between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the three-spatial-dimension Scalar Wave equation (i.e., `uu_rhs` and `vv_rhs`) between\n",
     "\n",
     "1. this tutorial and \n",
     "2. the [NRPy+ ScalarWave.ScalarWave_RHSs](../edit/ScalarWave/ScalarWave_RHSs.py) module."
@@ -556,7 +560,7 @@
    "source": [
     "<a id='code_validation2'></a>\n",
     "\n",
-    "## Step 4.a: Code Validation against ScalarWave.InitialData_PlaneWave NRPy+ module  \\[Back to [top](#toc)\\]\n",
+    "## Step 4.a: Code Validation against `ScalarWave.InitialData_PlaneWave` NRPy+ module  \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation2}$$\n",
     "\n",
     "As a code validation check, we will verify agreement in the SymPy expressions for plane-wave initial data for the Scalar Wave equation between\n",
@@ -626,7 +630,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ScalarWave.ipynb to latex\n",
-      "[NbConvertApp] Writing 63651 bytes to Tutorial-ScalarWave.tex\n",
+      "[NbConvertApp] Writing 64017 bytes to Tutorial-ScalarWave.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -650,21 +654,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
