--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -9,7 +9,15 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "### NRPy+ Source Code for this module: [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py)"
+    "[comment]: <> (Abstract: TODO)\n",
+    "\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). In addition, all expressions have been validated against a trusted code (the [original SENR/NRPy+ code](https://bitbucket.org/zach_etienne/nrpy)).\n",
+    "\n",
+    "### NRPy+ Source Code for this module: [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py)\n",
+    "\n",
+    "[comment]: <> (Introduction: TODO)"
    ]
   },
   {
@@ -27,7 +35,7 @@
     "1. [Example](#example): The scalar wave equation in spherical coordinates\n",
     "1. [Step 1](#contracted_christoffel): Contracted Christoffel symbols $\\hat{\\Gamma}^i = \\hat{g}^{ij}\\hat{\\Gamma}^k_{ij}$ in spherical coordinates, using NRPy+\n",
     "1. [Step 2](#rhs_scalarwave_spherical): The right-hand side of the scalar wave equation in spherical coordinates, using NRPy+\n",
-    "1. [Step 3](#code_validation): Code Validation against ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs  NRPy+ Module\n",
+    "1. [Step 3](#code_validation): Code Validation against `ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs`  NRPy+ Module\n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -172,7 +180,7 @@
     "$$\\hat{g}^{ij} \\hat{\\Gamma}^k_{ij}$$\n",
     "in spherical coordinates, where $i\\in\\{1,2,3\\}$ and $j\\in\\{1,2,3\\}$ are spatial indices.\n",
     "\n",
-    "As discussed in the [NRPy+ tutorial module on reference metrics](Tutorial-Reference_Metric.ipynb), several reference-metric-related quantities in spherical coordinates are computed in NRPy+ (provided the parameter **reference_metric::CoordSystem** is set to **\"Spherical\"**), including the inverse spatial spherical reference metric $\\hat{g}^{ij}$ and the Christoffel symbols from this reference metric $\\hat{\\Gamma}^{i}_{jk}$. "
+    "As discussed in the [NRPy+ tutorial module on reference metrics](Tutorial-Reference_Metric.ipynb), several reference-metric-related quantities in spherical coordinates are computed in NRPy+ (provided the parameter **`reference_metric::CoordSystem`** is set to **`\"Spherical\"`**), including the inverse spatial spherical reference metric $\\hat{g}^{ij}$ and the Christoffel symbols from this reference metric $\\hat{\\Gamma}^{i}_{jk}$. "
    ]
   },
   {
@@ -413,7 +421,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 3: Code Validation against ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs  NRPy+ Module \\[Back to [top](#toc)\\]\n",
+    "# Step 3: Code Validation against `ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs`  NRPy+ Module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the Curvilinear Scalar Wave equation (i.e., uu_rhs and vv_rhs) between\n",
@@ -498,7 +506,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ScalarWaveCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 53488 bytes to Tutorial-ScalarWaveCurvilinear.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 14, column 1)\n",
+      "[NbConvertApp] Writing 53920 bytes to Tutorial-ScalarWaveCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -522,21 +531,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
