--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "## This module sets up initial data for a neutron star on a spherical numerical grid, using the approach [documented in the previous NRPy+ module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb), and then evolves these initial data forward in time. The aim is to reproduce the results from [Baumgarte, Hughes, and Shapiro]( https://arxiv.org/abs/gr-qc/9902024) (which were performed using Cartesian grids); demonstrating that the extrinsic curvature and Hamiltonian constraint violation converge to zero with increasing numerical resolution\n",
     "\n",
-    "<font color='green'>**This module has been validated to exhibit convergence to zero of the Hamiltonian constraint violation at the expected order to the exact solution (see [plot](#convergence) at bottom). Note that convergence in the region causally influenced by the surface of the star will possess lower convergence order due to the sharp drop to zero in $T^{\\mu\\nu}$.**</font>\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has been validated to exhibit convergence to zero of the Hamiltonian constraint violation at the expected order to the exact solution (see [plot](#convergence) at bottom). Note that convergence in the region causally influenced by the surface of the star will possess lower convergence order due to the sharp drop to zero in $T^{\\mu\\nu}$.\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "\n",
@@ -57,8 +59,11 @@
     "    1. [Step 5.a](#ham_const_output): Output the Hamiltonian Constraint\n",
     "    1. [Step 5.b](#apply_bcs): Apply singular, curvilinear coordinate boundary conditions\n",
     "    1. [Step 5.c](#enforce3metric): Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint\n",
-    "1. [Step 6](#mainc): TOV_Playground.c: The Main C Code\n",
-    "1. [Step 7](#visual): Data Visualization Animations\n",
+    "1. [Step 6](#mainc): `TOV_Playground.c`: The Main C Code\n",
+    "1. [Step 7](#visualize): Data Visualization Animations\n",
+    "    1. [Step 7.a](#installdownload): Install `scipy` and download `ffmpeg` if they are not yet installed/downloaded\n",
+    "    1. [Step 7.b](#genimages): Generate images for visualization animation\n",
+    "    1. [Step 7.c](#genvideo): Generate visualization animation\n",
     "1. [Step 8](#convergence): Validation: Convergence of numerical errors (Hamiltonian constraint violation) to zero\n",
     "1. [Step 9](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
@@ -280,9 +285,9 @@
     "\n",
     "As all input quantities are functions of $r$, we will simply read the solution from file and interpolate it to the values of $r$ needed by the initial data.\n",
     "\n",
-    "1. First we define functions ID_TOV_ADM_quantities() and ID_TOV_TUPMUNU() that call the [1D TOV interpolator function](../edit/TOV/tov_interp.h) to evaluate the ADM spacetime quantities and $T^{\\mu\\nu}$, respectively, at any given point $(r,\\theta,\\phi)$ in the Spherical basis. All quantities are defined as above.\n",
+    "1. First we define functions `ID_TOV_ADM_quantities()` and `ID_TOV_TUPMUNU()` that call the [1D TOV interpolator function](../edit/TOV/tov_interp.h) to evaluate the ADM spacetime quantities and $T^{\\mu\\nu}$, respectively, at any given point $(r,\\theta,\\phi)$ in the Spherical basis. All quantities are defined as above.\n",
     "1. Next we will construct the BSSN/ADM source terms $\\{S_{ij},S_{i},S,\\rho\\}$ in the Spherical basis\n",
-    "1. Then we will perform the Jacobian transformation on $\\{S_{ij},S_{i},S,\\rho\\}$ to the desired (xx0,xx1,xx2) basis\n",
+    "1. Then we will perform the Jacobian transformation on $\\{S_{ij},S_{i},S,\\rho\\}$ to the desired `(xx0,xx1,xx2)` basis\n",
     "1. Next we call the *Numerical* Spherical ADM$\\to$Curvilinear BSSN converter function to conver the above ADM quantities to the rescaled BSSN quantities in the desired curvilinear coordinate system: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb)."
    ]
   },
@@ -401,7 +406,7 @@
     "\\rho &= n_\\mu n_\\nu T^{\\mu\\nu},\n",
     "\\end{array}\n",
     "\n",
-    "ID_TOV_TUPMUNU() provides numerical values for $T^{\\mu\\nu}$, but we do not have $\\gamma_{\\mu \\nu}$ or $n_\\mu$ directly. So here we will construct the latter quantities.\n",
+    "`ID_TOV_TUPMUNU()` provides numerical values for $T^{\\mu\\nu}$, but we do not have $\\gamma_{\\mu \\nu}$ or $n_\\mu$ directly. So here we will construct the latter quantities.\n",
     "\n",
     "First, B&S Eq. 2.27 defines $\\gamma_{\\mu \\nu}$ as:\n",
     "\n",
@@ -459,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's construct $\\gamma_{\\mu\\nu}$=gamma4DD\\[mu\\]\\[nu\\] via $\\gamma_{\\mu\\nu} = g_{\\mu\\nu} + n_\\mu n_\\nu$:"
+    "Now let's construct $\\gamma_{\\mu\\nu}$=`gamma4DD[mu][nu]` via $\\gamma_{\\mu\\nu} = g_{\\mu\\nu} + n_\\mu n_\\nu$:"
    ]
   },
   {
@@ -536,7 +541,7 @@
     "\n",
     "The following discussion holds for either Spherical or Cartesian input data, so for simplicity let's just assume the data are given in Spherical coordinates.\n",
     "\n",
-    "All ADM tensors and vectors are in the Spherical coordinate basis $x^i_{\\rm Sph} = (r,\\theta,\\phi)$, but we need them in the curvilinear coordinate basis $x^i_{\\rm rfm}= ({\\rm xx0},{\\rm xx1},{\\rm xx2})$ set by the \"reference_metric::CoordSystem\" variable. Empirically speaking, it is far easier to write $(x({\\rm xx0},{\\rm xx1},{\\rm xx2}),y({\\rm xx0},{\\rm xx1},{\\rm xx2}),z({\\rm xx0},{\\rm xx1},{\\rm xx2}))$ than the inverse, so we will compute the Jacobian matrix\n",
+    "All ADM tensors and vectors are in the Spherical coordinate basis $x^i_{\\rm Sph} = (r,\\theta,\\phi)$, but we need them in the curvilinear coordinate basis $x^i_{\\rm rfm}=$`(xx0,xx1,xx2)` set by the `\"reference_metric::CoordSystem\"` variable. Empirically speaking, it is far easier to write `(x(xx0,xx1,xx2),y(xx0,xx1, xx2),z(xx0,xx1,xx2))` than the inverse, so we will compute the Jacobian matrix\n",
     "\n",
     "$$\n",
     "{\\rm Jac\\_dUSph\\_dDrfmUD[i][j]} = \\frac{\\partial x^i_{\\rm Sph}}{\\partial x^j_{\\rm rfm}},\n",
@@ -547,7 +552,7 @@
     "{\\rm Jac\\_dUrfm\\_dDSphUD[i][j]} = \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^j_{\\rm Sph}},\n",
     "$$\n",
     "\n",
-    "using NRPy+'s ${\\rm generic\\_matrix\\_inverter3x3()}$ function. In terms of these, the transformation of ADM/BSSN source terms from Spherical to \"reference_metric::CoordSystem\" coordinates may be written:\n",
+    "using NRPy+'s `generic_matrix_inverter3x3()` function. In terms of these, the transformation of BSSN tensors from Spherical to `\"reference_metric::CoordSystem\"` coordinates may be written:\n",
     "\n",
     "\\begin{align}\n",
     "S^{\\rm rfm}_{ij} &= \n",
@@ -627,7 +632,7 @@
     "\n",
     "We rescale tensorial quantities according to the prescription described in the [BSSN in curvilinear coordinates tutorial module](Tutorial-BSSNCurvilinear.ipynb) (also [Ruchlin *et al.*](https://arxiv.org/pdf/1712.07658.pdf)):\n",
     "\n",
-    "Since $\\text{ReD[i]}=1/\\text{ReU[i]}$, we have\n",
+    "Since `ReD[i]=1/ReU[i]`, we have\n",
     "\n",
     "\\begin{align}\n",
     "s_{ij} &= S_{ij} /\\text{ReDD[i][j]}\\\\\n",
@@ -654,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we use NRPy+ to write a C function that reads in $T^{\\mu\\nu}$ in the given (Spherical) basis and outputs the source terms $\\{S_{ij},S_{i},S,\\rho\\}$ in the (xx0,xx1,xx2) basis:"
+    "Next we use NRPy+ to write a C function that reads in $T^{\\mu\\nu}$ in the given (Spherical) basis and outputs the source terms $\\{S_{ij},S_{i},S,\\rho\\}$ in the `(xx0,xx1,xx2)` basis:"
    ]
   },
   {
@@ -751,7 +756,7 @@
     "# Step 4: Set up the BSSN right-hand-side (RHS) expressions, and add the *rescaled* $T^{\\mu\\nu}$ source terms \\[Back to [top](#toc)\\]\n",
     "$$\\label{bssn_source}$$\n",
     "\n",
-    "BSSN.BSSN_RHSs() currently sets up the RHSs assuming a spacetime vacuum: $T^{\\mu\\nu}=0$. (This might seem weird, but remember that *black hole spacetimes are vacuum spacetimes*.) Here we add the $T^{\\mu\\nu}$ source terms to these equations.\n",
+    "`BSSN.BSSN_RHSs()` currently sets up the RHSs assuming a spacetime vacuum: $T^{\\mu\\nu}=0$. (This might seem weird, but remember that *black hole spacetimes are vacuum spacetimes*.) Here we add the $T^{\\mu\\nu}$ source terms to these equations.\n",
     "\n",
     "Equations 9a-9e in [Baumgarte, Montero, Cordero-Carrión, and Müller](https://arxiv.org/pdf/1211.6632.pdf) provide the necessary prescription:\n",
     "\n",
@@ -849,7 +854,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 69.25046420097351 seconds.\n"
+      "Finished in 68.17306780815125 seconds.\n"
      ]
     }
    ],
@@ -940,7 +945,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished in 10.932046890258789 seconds.\n",
+      "Finished in 10.647217750549316 seconds.\n",
       "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
      ]
     }
@@ -1026,7 +1031,7 @@
    "source": [
     "<a id='mainc'></a>\n",
     "\n",
-    "# Step 6: TOV_Playground.c: The Main C Code \\[Back to [top](#toc)\\]\n",
+    "# Step 6: `TOV_Playground.c`: The Main C Code \\[Back to [top](#toc)\\]\n",
     "$$\\label{mainc}$$\n"
    ]
   },
@@ -1548,7 +1553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2KIt: 326 t=0.50 | 100.0%; ETA 0 s | t/h 169.11 | gp/s 3.76e+05\n"
+      "\u001b[2KIt: 326 t=0.50 | 100.0%; ETA 0 s | t/h 256.31 | gp/s 5.70e+05\n"
      ]
     }
    ],
@@ -1584,17 +1589,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='visual'></a>\n",
+    "<a id='visualize'></a>\n",
     "\n",
     "# Step 7: Data Visualization Animations \\[Back to [top](#toc)\\]\n",
-    "$$\\label{visual}$$\n",
+    "$$\\label{visualize}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='installdownload'></a>\n",
+    "\n",
+    "## Step 7.a: Install `scipy` and download `ffmpeg` if they are not yet installed/downloaded \\[Back to [top](#toc)\\]\n",
+    "$$\\label{installdownload}$$ \n",
+    "\n",
+    "Note that if you are not running this within `mybinder`, but on a Windows system, `ffmpeg` must be installed using a separate package (on [this site](http://ffmpeg.org/)), or (if running Jupyter within Anaconda, use the command: `conda install -c conda-forge ffmpeg`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ignore any warnings or errors from the following command:\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ignore any warnings or errors from the following command:\")\n",
+    "!pip install scipy > /dev/null\n",
+    "\n",
+    "check_for_ffmpeg = !which ffmpeg >/dev/null && echo $?\n",
+    "if check_for_ffmpeg != ['0']:\n",
+    "    print(\"Couldn't find ffmpeg, so I'll download it.\")\n",
+    "    # Courtesy https://johnvansickle.com/ffmpeg/\n",
+    "    !wget https://math.wvu.edu/~zetienne/ffmpeg-static-amd64-johnvansickle.tar.xz\n",
+    "    !tar Jxf ffmpeg-static-amd64-johnvansickle.tar.xz\n",
+    "    print(\"Copying ffmpeg to ~/.local/bin/. Assumes ~/.local/bin is in the PATH.\")\n",
+    "    !mkdir ~/.local/bin/\n",
+    "    !cp ffmpeg-static-amd64-johnvansickle/ffmpeg ~/.local/bin/\n",
+    "    print(\"If this doesn't work, then install ffmpeg yourself. It should work fine on mybinder.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='genimages'></a>\n",
+    "\n",
+    "## Step 7.b: Generate images for visualization animation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{genimages}$$ \n",
+    "\n",
+    "Here we loop through the data files output by the executable compiled and run in [the previous step](#mainc), generating a [png](https://en.wikipedia.org/wiki/Portable_Network_Graphics) image for each data file.\n",
     "\n",
     "**Special thanks to Terrence Pierre Jacques. His work with the first versions of these scripts greatly contributed to the scripts as they exist below.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1655,6 +1713,7 @@
     "    im = plt.imshow(grid, extent=(pl_xmin,pl_xmax, pl_ymin,pl_ymax))\n",
     "    #plt.pcolormesh(grid_y,grid_x, grid, vmin=-8, vmax=0) # Set colorbar range from -8 to 0\n",
     "    ax = plt.colorbar()\n",
+    "    plt.clim(-9, -2)\n",
     "    ax.set_label(plotdescription)\n",
     "    savefig(filename+\".png\",dpi=150)\n",
     "    plt.close(fig)\n",
@@ -1664,8 +1723,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='genvideo'></a>\n",
+    "\n",
+    "## Step 7.c: Generate visualization animation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{genvideo}$$ \n",
+    "\n",
+    "In the following step, [ffmpeg](http://ffmpeg.org) is used to generate an [mp4](https://en.wikipedia.org/wiki/MPEG-4) video file, which can be played directly from this Jupyter notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1799,7 +1870,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2KIt: 81 t=0.50 | 100.0%; ETA 0 s | t/h 1469.90 | gp/s 2.04e+05\n"
+      "\u001b[2KIt: 81 t=0.50 | 100.0%; ETA 0 s | t/h 3562.93 | gp/s 4.96e+05\n"
      ]
     },
     {
@@ -1883,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1893,7 +1964,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb to latex\n",
-      "[NbConvertApp] Writing 197032 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.tex\n",
+      "[NbConvertApp] Writing 202116 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
