Add MoL timestepping to all tutorial modules. Also lots of other improvements.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
@@ -28902,29 +28902,28 @@
     }
    ],
    "source": [
-    "!rm -f GiRaFFE_standalone_1D out1280*.txt out2560*.txt\n",
+    "import cmdline_helper as cmd\n",
     "\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
-    "# Normal compile\n",
-    "#!g++ -g -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm\n",
-    "!gcc -g -O2 -fopenmp GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm\n",
-    "# Compile for Valgrind\n",
-    "#!g++ -g -O2 GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm\n",
+    "cmd.C_compile(\"GiRaFFE_standalone/GiRaFFE_standalone.c\", \"GiRaFFE_standalone_1D\")\n",
     "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at low-resolution. Should take ~500 seconds...\\n\")\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "#!valgrind --track-origins=yes ./GiRaFFE_standalone_1D 4 2 2 0.5\n",
+    "cmd.delete_existing_files(\"out1280*.txt\")\n",
+    "cmd.delete_existing_files(\"out2560*.txt\")\n",
     "\n",
+    "print(\"Now running at low resolution. Should take ~500 seconds...\\n\")\n",
     "start = time.time()\n",
-    "!taskset -c 0,1 ./GiRaFFE_standalone_1D 1280 4 4 0.5\n",
+    "cmd.Execute(\"GiRaFFE_standalone_1D\", \"1280 4 4 0.5\")\n",
     "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\nNow running at higher-resolution. Should take ~8000 seconds...\\n\")\n",
+    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
+    "print(\"Now running at medium resolution. Should take ~8000 seconds...\\n\")\n",
     "start = time.time()\n",
-    "#!taskset -c 0,1 ./GiRaFFE_standalone_1D 2560 64 64 0.5\n",
+    "cmd.Execute(\"GiRaFFE_standalone_1D\", \"2560 8 8 0.5\")\n",
     "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\")"
+    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")"
    ]
   },
   {
