--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -550,7 +550,7 @@
     "      REAL REAL_parity_array[10];\n",
     "      set_bc_parity_conditions(REAL_parity_array,  xx0,xx1,xx2, xx0_inbounds,xx1_inbounds,xx2_inbounds);\n",
     "      for(int whichparity=0;whichparity<10;whichparity++) {\n",
-    "          //printf(\"Good? Parity %d evaluated to %e\\n\",whichparity,REAL_parity_array[whichparity]);\n",
+    "          //printf(\"Good? Parity %d evaluated to %e\\n\",whichparity,(double)REAL_parity_array[whichparity]);\n",
     "          // Perform sanity check on parity array output: should be +1 or -1 to within 8 significant digits:\n",
     "          if( (REAL_parity_array[whichparity]  > 0 && fabs(REAL_parity_array[whichparity] - (+1)) > 1e-8) ||\n",
     "              (REAL_parity_array[whichparity] <= 0 && fabs(REAL_parity_array[whichparity] - (-1)) > 1e-8) ) {\n",
@@ -760,22 +760,27 @@
     "\n",
     "// Step P3: Set free parameters\n",
     "// Step P3a: Free parameters for the numerical grid\n",
-    "// Cartesian coordinates parameters\n",
-    "const REAL xmin = -10.,xmax=10.;\n",
-    "const REAL ymin = -10.,ymax=10.;\n",
-    "const REAL zmin = -10.,zmax=10.;\n",
     "\n",
-    "// Spherical coordinates parameter\n",
-    "const REAL RMAX    = 7.5;\n",
-    "// SinhSpherical coordinates parameters\n",
-    "const REAL AMPL    = 7.5;\n",
-    "const REAL SINHW   = 0.125;\n",
-    "// Cylindrical coordinates parameters\n",
-    "const REAL ZMIN   = -7.5;\n",
-    "const REAL ZMAX   =  7.5;\n",
-    "const REAL RHOMAX =  7.5;\n",
+    "// Spherical coordinates parameter:\n",
+    "// Set RMAX, the scale of the numerical domain, \n",
+    "//  and the max radius in Spherical coordinates.\n",
+    "#define RMAX 7.5\n",
+    "// SinhSpherical coordinates parameters:\n",
+    "const REAL AMPL    = RMAX;\n",
+    "const REAL SINHW   = 0.2;\n",
+    "// Cylindrical coordinates parameters:\n",
+    "const REAL ZMIN   = -RMAX;\n",
+    "const REAL ZMAX   =  RMAX;\n",
+    "const REAL RHOMAX =  RMAX;\n",
+    "// Cartesian coordinates parameters:\n",
+    "const REAL xmin = -RMAX, xmax = RMAX;\n",
+    "const REAL ymin = -RMAX, ymax = RMAX;\n",
+    "const REAL zmin = -RMAX, zmax = RMAX;\n",
+    "// SymTP coordinates parameters:\n",
+    "const REAL bScale =   0.5;\n",
+    "const REAL AMAX   =  RMAX;\n",
     "\n",
-    "// Step P6: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
+    "// Step P4: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
     "//          data in a 1D array. In this case, consecutive values of \"i\" \n",
     "//          (all other indices held to a fixed value) are consecutive in memory, where \n",
     "//          consecutive values of \"j\" (fixing all other indices) are separated by \n",
@@ -787,7 +792,7 @@
     "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
     "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
     "\n",
-    "// Step P7: Set #define's for BSSN gridfunctions. C code generated above\n",
+    "// Step P5: Set #define's for BSSN gridfunctions. C code generated above\n",
     "#include \"gridfunction_defines.h\"\n",
     "\n",
     "#define LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) \\\n",
@@ -800,21 +805,20 @@
     "#include \"xxCart.h\"\n",
     "}\n",
     "\n",
-    "// Step P8: Include basic functions needed to impose curvilinear\n",
+    "// Step P6: Include basic functions needed to impose curvilinear\n",
     "//          parity and boundary conditions.\n",
     "#include \"curvilinear_parity_and_outer_boundary_conditions.h\"\n",
     "\n",
-    "\n",
-    "// Step P10: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
+    "// Step P7: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
     "#include \"CurviBC_Discrete_Test.h\"\n",
     "\n",
     "// main() function:\n",
     "// Step 0: Read command-line input, set up grid structure, allocate memory for gridfunctions, set up coordinates\n",
-    "// Step 1: Set up scalar wave initial data\n",
-    "// Step 2: Evolve scalar wave initial data forward in time using Method of Lines with RK4 algorithm,\n",
-    "//         applying quadratic extrapolation outer boundary conditions.\n",
+    "// Step 1: Write test data to gridfunctions\n",
+    "// Step 2: Overwrite all data in ghost zones with NaNs\n",
     "// Step 3: Output relative error between numerical and exact solution.\n",
-    "// Step 4: Free all allocated memory\n",
+    "// Step 4: Print gridfunction data after curvilinear boundary conditions have been applied:\n",
+    "// Step 5: Free all allocated memory\n",
     "int main(int argc, const char *argv[]) {\n",
     "\n",
     "    // Step 0a: Read command-line input, error out if nonconformant\n",
@@ -864,7 +868,7 @@
     "    parity_condition *bc_parity_conditions = (parity_condition *)malloc(sizeof(parity_condition)*Nxx_plus_2NGHOSTS_tot);\n",
     "    set_up_bc_gz_map_and_parity_conditions(Nxx_plus_2NGHOSTS,xx,dxx,xxmin,xxmax,  bc_gz_map, bc_parity_conditions);\n",
     "\n",
-    "    // Step 1: Store test data to gridfunctions\n",
+    "    // Step 1: Write test data to gridfunctions\n",
     "    if(strncmp(\"Discrete\",test_type,100)==0) {\n",
     "        Discrete_initial_data(Nxx_plus_2NGHOSTS, test_gfs);\n",
     "    } else {\n",
@@ -881,10 +885,10 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    // Step 3: Apply boundary conditions\n",
+    "    // Step 3: Apply curvilinear boundary conditions\n",
     "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions, NUM_AUX_GFS,aux_gf_parity, test_gfs);\n",
     "    \n",
-    "    // Step 4: Print output:\n",
+    "    // Step 4: Print gridfunction data after curvilinear boundary conditions have been applied:\n",
     "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[2], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[0]) {\n",
     "        printf(\"%d %d %d | \",i0,i1,i2);\n",
     "        for(int gf=0;gf<NUM_AUX_GFS;gf++) {\n",
@@ -899,7 +903,7 @@
     "        printf(\"\\n\");\n",
     "    }\n",
     "\n",
-    "    /* Step 4: Free all allocated memory */\n",
+    "    // Step 5: Free all allocated memory\n",
     "    free(bc_parity_conditions);\n",
     "    free(bc_gz_map);\n",
     "    free(test_gfs);\n",
@@ -917,32 +921,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Compiling executable...\n",
+      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.628187894821 seconds.\n",
+      "Finished compilation.\n",
+      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.223826885223 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
    ],
    "source": [
-    "!cd CurviBoundaryConditions/\n",
-    "!gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
-    "!./CurviBC_Playground 4 4 4 Discrete > CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt\n",
-    "print(\"Finished this code cell.\")\n",
-    "\n",
-    "# Windows Code:\n",
-    "# import os\n",
-    "# N_physical_cores = 4\n",
-    "# !gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
-    "# script = \"\"\n",
-    "# check_for_taskset = !which taskset >/dev/null && echo $?\n",
-    "# if check_for_taskset == ['0']:\n",
-    "#     script += \"taskset -c 0\"\n",
-    "#     for i in range(N_physical_cores-1):\n",
-    "#         script += \",\"+str(i+1)\n",
-    "#     script += \" \"\n",
-    "# exec_string = os.path.join(\".\", \"CurviBC\")\n",
-    "# script += exec_string + \"_Playground 4 4 4 Discrete > CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt\"\n",
-    "# print(\"Executing `\"+script+\"`...\")\n",
-    "# os.system(script)\n",
-    "# print(\"Finished this code cell.\")"
+    "import cmdline_helper as cmd\n",
+    "cmd.C_compile(\"CurviBoundaryConditions/CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
+    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \"CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
+    "print(\"Finished this code cell.\")"
    ]
   },
   {
@@ -964,25 +957,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Printing difference between original SENR code and this code. No difference = PASS!\n",
-      "Finished printing difference\n"
+      "Spherical boundary condition comparison test between this tutorial module & trusted original SENR code: PASSED\n"
      ]
     }
    ],
    "source": [
-    "# https://docs.python.org/2/library/difflib.html\n",
-    "import difflib\n",
     "import sys\n",
     "\n",
-    "!echo \"Printing difference between original SENR code and this code. No difference = PASS!\"\n",
-    "# Open the files to compare\n",
-    "with open(\"CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt\") as file1, open(\"CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt\") as file2:\n",
-    "        # Read the lines of each file\n",
-    "        file1_lines = file1.readlines()\n",
-    "        file2_lines = file2.readlines()\n",
-    "        for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=\"CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt\", tofile=\"CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt\"):\n",
-    "            sys.stdout.writelines(line)\n",
-    "!echo \"Finished printing difference\""
+    "import filecmp\n",
+    "if filecmp.cmp('CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt',\n",
+    "               'CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt') == False:\n",
+    "    print(\"ERROR: Spherical boundary conditions do not agree!\")\n",
+    "    sys.exit(1)\n",
+    "else:\n",
+    "    print(\"Spherical boundary condition comparison test between this tutorial module & trusted original SENR code: PASSED\")"
    ]
   },
   {
@@ -999,16 +987,32 @@
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
+      "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
+      "Compiling executable...\n",
+      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.620012044907 seconds.\n",
+      "Finished compilation.\n",
+      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.226057052612 seconds.\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
       "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxminmax.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
+      "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
+      "Compiling executable...\n",
+      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.628010988235 seconds.\n",
+      "Finished compilation.\n",
+      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.218764066696 seconds.\n",
+      "Finished this code cell.\n",
       "\n",
       "\n",
-      "Spherical boundary condition test PASSED\n",
-      "Cylindrical boundary condition test PASSED\n"
+      "Spherical boundary condition comparison test between CBC & trusted original SENR code: PASSED\n",
+      "Cylindrical boundary condition comparison test between CBC & trusted original SENR code: PASSED\n"
      ]
     }
    ],
@@ -1017,57 +1021,34 @@
     "import CurviBoundaryConditions.CurviBoundaryConditions as cbcs\n",
     "cbcs.Set_up_CurviBoundaryConditions()\n",
     "\n",
-    "!gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
-    "!./CurviBC_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\n",
+    "print(\"Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\")\n",
+    "cmd.C_compile(\"CurviBoundaryConditions/CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
+    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \"CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\")\n",
     "\n",
-    "# Windows Code\n",
-    "# script = \"\"\n",
-    "# if check_for_taskset == ['0']:\n",
-    "#     script += \"taskset -c 0\"\n",
-    "#     for i in range(N_physical_cores-1):\n",
-    "#         script += \",\"+str(i+1)\n",
-    "#     script += \" \"\n",
-    "# exec_string = os.path.join(\".\", \"CurviBC\")\n",
-    "# script += exec_string + \"_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\"\n",
-    "# print(\"Executing `\"+script+\"`...\")\n",
-    "# os.system(script)\n",
-    "\n",
-    "\n",
-    "    \n",
     "# Then we set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cylindrical\")\n",
     "rfm.reference_metric()\n",
     "cbcs.Set_up_CurviBoundaryConditions()\n",
-    "!gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
-    "!./CurviBC_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\n",
-    "\n",
-    "# Windows Code\n",
-    "# script = \"\"\n",
-    "# if check_for_taskset == ['0']:\n",
-    "#     script += \"taskset -c 0\"\n",
-    "#     for i in range(N_physical_cores-1):\n",
-    "#         script += \",\"+str(i+1)\n",
-    "#     script += \" \"\n",
-    "# exec_string = os.path.join(\".\", \"CurviBC\")\n",
-    "# script += exec_string + \"_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\"\n",
-    "# print(\"Executing `\"+script+\"`...\")\n",
-    "# os.system(script)\n",
+    "print(\"Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\")\n",
+    "cmd.C_compile(\"CurviBoundaryConditions/CurviBC_Playground.c\", \"CurviBC_Playground\")\n",
+    "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", \"CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\")\n",
+    "print(\"Finished this code cell.\")\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
     "if filecmp.cmp('CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt',\n",
     "               'CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt') == False:\n",
     "    print(\"ERROR: Spherical boundary conditions do not agree!\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "else:\n",
-    "    print(\"Spherical boundary condition test PASSED\")\n",
+    "    print(\"Spherical boundary condition comparison test between CBC & trusted original SENR code: PASSED\")\n",
     "\n",
     "if filecmp.cmp('CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt',\n",
     "               'CurviBoundaryConditions/SENRout4x4x4-Cylindrical_NGHOSTS4oFD.txt') == False:\n",
     "    print(\"ERROR: Cylindrical boundary conditions do not agree!\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "else:\n",
-    "    print(\"Cylindrical boundary condition test PASSED\")"
+    "    print(\"Cylindrical boundary condition comparison test between CBC & trusted original SENR code: PASSED\")"
    ]
   },
   {
@@ -1093,7 +1074,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 139790 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+      "[NbConvertApp] Writing 100706 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1117,21 +1098,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
